--- a/scripts/090_macronutrients_diversity_and_genus__code_for_Figure_2E_data.Rmd
+++ b/scripts/090_macronutrients_diversity_and_genus__code_for_Figure_2E_data.Rmd
@@ -556,11 +556,11 @@ p_corrplot <- ggplot(plot_data_lower_tri, aes(x = measure1, y = measure2, fill =
   geom_text(aes(label = round(r, 2)), color = "black", size = 3.5) +
   # Use the same "Blue-White-Red" color scale, centered at 0
   scale_fill_gradient2(
-    low = "#00007F", 
-    mid = "green", 
-    high = "#7F0000",
-    midpoint = 0,
-    limit = c(-1, 1), # Force the scale to be from -1 to 1
+    low = "#15294B", 
+    mid = "yellow", 
+    high = "red",
+    midpoint = 0.4,
+    limit = c(0, 1), # Force the scale to be from -1 to 1
     name = "r"
   ) +
   # Force the y-axis to be in the "matrix" order (reversed)
