--- a/scripts/178_new_F4__code_for_Figure_4.Rmd
+++ b/scripts/178_new_F4__code_for_Figure_4.Rmd
@@ -316,8 +316,6 @@ n_per_grp <- newest %>%
 range(n_per_grp$n)
 ```
 
-
-
 ```{r}
 # maybe I can plot in a different way 
 plotdf <- newest %>% 
@@ -362,7 +360,7 @@ df <- dat_entero_wide %>%
 ```
 
 ```{r}
-# calculate the trapezoidal auc from the log 10 transformed value
+# calculate the trapezoidal auc from value
 
 library(DescTools) 
 
@@ -373,7 +371,7 @@ auc_results <- newest %>%
   summarize(
     # The AUC function from DescTools calculates the area under the curve.
     # We use the log-transformed CFU values for this calculation.
-    auc_value = AUC(x = Day, y = Log_CFUs_per_GramStool),
+    auc_value = AUC(x = Day, y = CFUs_per_GramStool),
     # The .groups = 'drop' argument cleans up the grouping structure afterward.
     .groups = 'drop'
   ) |> 
@@ -385,19 +383,16 @@ my_comparisons <- list( c("PBS__vehicle", "biapenem__vehicle"),
                         c("biapenem__vehicle", "biapenem__sucrose"), 
                         c("PBS__vehicle", "PBS__sucrose"))
 
-f3_AUC_log10 <- ggboxplot(auc_results,
+f3_AUC <- ggboxplot(auc_results,
           x="groups",add = 'jitter',
           y="auc_value", color  = 'groups', add.params = list(alpha = 0.5, shape = 16)) +
   ylab("Trapezoidal\nAUC")+xlab('') +
    scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2')) +
-  #scale_y_log10(breaks = c(1 %o% 10^(-1:8)),  labels = trans_format("log10", math_format(10^.x))) +
+  scale_y_log10(breaks = c(1 %o% 10^(-1:8)),  labels = trans_format("log10", math_format(10^.x))) +
   stat_compare_means(comparisons = my_comparisons,label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
-  theme(axis.title=element_text(size=10), 
-        axis.text =  element_text(size = 10),
-        #axis.text.x = element_blank(),
-        legend.position = 'none',aspect.ratio=1/3.1, axis.ticks.x = element_blank())
+  theme(axis.text.x = element_blank(),axis.title=element_text(size=10), axis.text =  element_text(size = 10),legend.position = 'none',aspect.ratio=1/3.1, axis.ticks.x = element_blank())
 
-f3_AUC_log10
+f3_AUC
 ```
 
 ## fold_change
@@ -467,18 +462,18 @@ f3_days <- plotdf %>%
   theme(axis.text =  element_text(size = 10),axis.title=element_text(size=10),legend.position = 'none',aspect.ratio=1/1.3)
 
 # the boxplot of the AUC
-my_comparisons <- list( c("PBS__vehicle", "biapenem__vehicle"), 
-                        c("biapenem__vehicle", "biapenem__sucrose"), 
-                        c("PBS__vehicle", "PBS__sucrose"))
-
-f3_AUC <- ggboxplot(dat_entero_wide,
-          x="groups",add = 'jitter',
-          y="trap", color  = 'groups', add.params = list(alpha = 0.5, shape = 16)) +
-  ylab("Trapezoidal\nAUC")+xlab('') +
-   scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2')) +
-  scale_y_log10(breaks = c(1 %o% 10^(-1:8)),  labels = trans_format("log10", math_format(10^.x))) +
-  stat_compare_means(comparisons = my_comparisons,label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
-  theme(axis.text.x = element_blank(),axis.title=element_text(size=10), axis.text =  element_text(size = 10),legend.position = 'none',aspect.ratio=1/3.1, axis.ticks.x = element_blank())
+# my_comparisons <- list( c("PBS__vehicle", "biapenem__vehicle"), 
+#                         c("biapenem__vehicle", "biapenem__sucrose"), 
+#                         c("PBS__vehicle", "PBS__sucrose"))
+# 
+# f3_AUC <- ggboxplot(dat_entero_wide,
+#           x="groups",add = 'jitter',
+#           y="trap", color  = 'groups', add.params = list(alpha = 0.5, shape = 16)) +
+#   ylab("Trapezoidal\nAUC")+xlab('') +
+#    scale_color_manual(values = c('gray76','#ffbcdc','gray32','deeppink2')) +
+#   scale_y_log10(breaks = c(1 %o% 10^(-1:8)),  labels = trans_format("log10", math_format(10^.x))) +
+#   stat_compare_means(comparisons = my_comparisons,label= "p.signif", method= 'wilcox.test',tip.length = 0.04,exact=T,correct=T) +
+#   theme(axis.text.x = element_blank(),axis.title=element_text(size=10), axis.text =  element_text(size = 10),legend.position = 'none',aspect.ratio=1/3.1, axis.ticks.x = element_blank())
 
 # combine the above two together on a stack
 f3_mouse <- plot_grid(f3_days,NA, f3_AUC,  ncol = 1,
